<resources>
    <string name="app_name">Sikatuna Parish</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="event_id">0</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="view_groups">View Groups</string>
    <string name="add_new_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_leader_name">Leader Name</string>
    <string name="group_contact_number">Contact Number</string>
    <string name="create_group">Create Group</string>
    <string name="clear">Clear</string>
    <string name="create_event">Create Event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="event_name">Event Name</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="details">Details</string>
    <string name="priest">Priest</string>
    <string name="time_end">Time End</string>
    <string name="time_start">Time Start</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save_to_docs">Save to Documents</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="filename">Filename</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_event">Add Event</string>
    <string name="view_events">View Events</string>
</resources>
