<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/group_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/group_leader_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/group_leader_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/group_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/group_contact_number"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/create_group"
            android:onClick="createGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/caldroid_white"
            android:layout_weight="1"
            android:text="@string/create_group" />

        <Button
            android:id="@+id/clear_fields"
            android:onClick="clearFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/caldroid_white"
            android:layout_weight="1"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/response_text"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>